# WeaveECS

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Modules/ECS/: Component.ixx  Entity.ixx
Modules/Logging/: Logging.ixx
Tests/ECS/: ComponentTests.cpp
